<resources>
    <string name="app_name">RegularBusDiver</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_search">查询</string>
    <string name="main_order">预定</string>
    <string name="main_location">位置</string>
    <string name="main_setting">设置</string>
    <string name="main_search_title">线路详情查询</string>
    <string name="keycode_back_alert_message">再按一次退出App</string>
    <string name="app_host">124.127.117.110:8080/ctbri-bus-management</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login_bt_hint">登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_use_sms">短信验证码登录</string>
    <string name="login_new_user">注册</string>
    <string name="login_right_now">登录</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_hint">6-20位字符</string>
    <string name="SplashActivity">SplashActivity</string>
    <string name="LoginActivity">LoginActivity</string>
    <string name="login_fail">登陆失败，重新登陆</string>
    <string name="select_bus">选择新的线路</string>
    <string name="recomend_line">推荐线路</string>
    <string name = "line_detail_title">班车线路详情</string>
    <string name = "line_detail_time">时间</string>
    <string name = "line_detail_order">预定数量</string>
    <string name = "line_detail_free">剩余数量</string>
    <string name = "line_detail_btn_order">座位预定</string>
    <string name="title_activity_line_detail">LineDetailActivity</string>
    <string name="order_title">预约班车</string>
    <string name="order_confirm">确定</string>
    <string name="setting_no_login">点击登录</string>
    <string name="setting_about">关于APP</string>
    <string name="setting_logout">退出</string>
    <string name="setting_title">个人中心</string>
    <string name="order_yes">已经预定，点击取消</string>
    <string name="order_no">没有预定</string>
    <string name="order_yes1">已经预定过</string>

</resources>
