<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tel.china.regularbusdiver.ui.activity.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/splash">
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="@dimen/logoWidth"
        android:layout_height="@dimen/logoWidth"
        android:background="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_25"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bt_height"
        android:layout_marginTop="@dimen/margin_30">

        <com.tel.china.regularbusdiver.ui.ClearableEditText
            android:id="@+id/et_user_name"
            style="@style/normal_black_et_bt_height"
            android:background="@drawable/edit_bg"
            android:hint="@string/login_username_hint"
            android:paddingLeft="@dimen/et_padding"
            android:paddingRight="@dimen/margin_15"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_user_name"
            style="@style/normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_user_name"
            android:layout_marginLeft="@dimen/margin_15"
            android:text="@string/user_name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bt_height"
        android:layout_marginTop="@dimen/margin_8">
        <com.tel.china.regularbusdiver.ui.ClearableEditText
            android:id="@+id/et_password"
            style="@style/normal_black_et_bt_height"
            android:background="@drawable/edit_bg"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/et_padding"
            android:paddingRight="@dimen/margin_15"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/normal_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_password"
            android:layout_marginLeft="@dimen/margin_15"
            android:text="@string/password" />
    </RelativeLayout>


    <Button
        android:text="@string/login_bt_hint"
        android:layout_marginTop="@dimen/margin_20"
        style="@style/normal_red_button"
        android:id="@+id/bt_sign_in"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:id="@+id/bt_sign_in_sms"
            android:text="@string/login_use_sms"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bt_height"
            android:textSize="@dimen/font_16"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/transparent_round_corner_button"
            android:layout_marginLeft="@dimen/margin_15"
            android:visibility="invisible"/>


        <TextView
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="@dimen/margin_20"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <Button
            android:text="@string/login_new_user"
            android:id="@+id/bt_sign_up"
            android:layout_marginTop="@dimen/margin_5"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bt_height"
            android:textSize="@dimen/font_16"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/transparent_round_corner_button"
            android:visibility="invisible"/>

    </LinearLayout>


</LinearLayout>
