<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_gray_bg_color">

    <com.tel.china.regularbusdiver.util.TitleBar
        android:id="@+id/setting_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/setting_user_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_176"
        android:background="@drawable/list_selector"
        android:clickable="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/setting_user_pic_iv"
            android:layout_width="@dimen/px_116"
            android:layout_height="@dimen/px_116"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_30"
            android:scaleType="fitXY"
            android:src="@drawable/default_avatar"/>

        <TextView
            android:id="@+id/setting_user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/px_24"
            android:layout_toRightOf="@id/setting_user_pic_iv"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/setting_no_login"
            android:textColor="#333333"
            android:textSize="@dimen/textsize_30"/>

        <ImageView
            android:id="@+id/setting_user_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px_30"
            android:src="@drawable/icon_arrow_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/app_gray_bg_color"/>

    <TextView
        android:id="@+id/setting_logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/my_advisor"
        android:drawablePadding="@dimen/px_20"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/setting_logout"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_30"
        android:background="@android:color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/app_gray_bg_color"/>

    <TextView
        android:id="@+id/setting_aout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/my_about"
        android:drawablePadding="@dimen/px_20"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/setting_about"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textsize_30"
        android:background="@android:color/white"/>

</LinearLayout>